feat: add Swing desktop frontend (FlatLaf) — 5th view implementation
- New module: br.com.wdc.shopping.view.swing
  - Java Swing + FlatLaf 3.5.4 (Material look-and-feel)
  - All screens: Login, Home, Product Detail, Cart, Receipt
  - Pagination with compact arrow buttons
  - Card hover effects, click propagation, HTML description rendering
  - Dev mode: click logo to rebuild all views (configurable)
  - ~60fps render loop with dirty-view tracking

- Configuration: work/config/application.toml (TOML format)
  - database, security, server, dev.mode settings

- Updated screenshots to reflect current Swing UI
- Updated README.md files with Mermaid architecture diagrams
- Added Swing to all architecture diagrams and module tables